fix(theme): Fix chevron rotation on firefox

--- a/packages/theme/src/theme/_forms.switch-nested.scss
+++ b/packages/theme/src/theme/_forms.switch-nested.scss
@@ -14,7 +14,7 @@
 			}
 		}
 		&.expanded {
-			svg {
+			.tc-svg-icon {
 				transform: rotate(180deg);
 			}
 		}
